<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	        xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    tools:context=".MainMenuActivity" 
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/bNewCharacter"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:focusable="true"
	        android:onClick="newCharacter"
	        android:text="@string/button_new_character" />
	
	    <Button
	        android:id="@+id/bLoadCharacter"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:focusable="true"
	        android:enabled="false"
	        android:onClick="loadCharacter"	        
	        android:text="@string/button_load_character" />

	    <Button
	        android:id="@+id/bLibrary"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:focusable="true"
	        android:onClick="libraryMenu"		        
	        android:text="@string/button_library" />	    

	    <Button
	        android:id="@+id/bHelp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:focusable="true"
	        android:enabled="false"	        
	        android:onClick="helpMenu"	        
	        android:text="@string/button_help" />	    
	    	    	       
	</LinearLayout>
</ScrollView>